# BookShopManagement

./: .gitignore  BookShopManagement.dev  BookShopManagement.layout  Books.cpp  Books.h  CMakeLists.txt  Employees.cpp  Employees.h  Enum.h  Members.cpp  Members.h  Purchases.cpp  Purchases.h  README.txt  Sales.cpp  Sales.h  Suppliers.cpp  Suppliers.h  main.cpp
Dependencies/mingw64/include/c++/12.1.0/bits/: predefined_ops.h
Dependencies/mingw64/x86_64-w64-mingw32/lib/ldscripts/: i386pe.x  i386pe.xa  i386pe.xbn  i386pe.xe  i386pe.xn  i386pe.xr  i386pe.xu  i386pep.x  i386pep.xa  i386pep.xbn  i386pep.xe  i386pep.xn  i386pep.xr  i386pep.xu
